--- a/paradigms.tex
+++ b/paradigms.tex
@@ -1,4 +1,3 @@
-
 \begin {table}[H]
   \caption{Earlier methods of measuring emotional intelligence}
   \label{table:paradigms}
@@ -13,7 +12,7 @@
     & Managing Emotions & Managing emotions/relations      & Ability \\
     \midrule
 
-    \multirow{10}{*}{(S)PEC}
+    \multirow{10}{*}{SPEC/PEC}
     & Interpersonal Identification & Self-report questionnaire & Ability \\
     & Interpersonal Expression & Self-report questionnaire & Ability \\
     & Interpersonal Comprehension & Self-report questionnaire & Ability \\
@@ -24,7 +23,7 @@
     & Intrapersonal Expression & Self-report questionnaire & Ability \\
     & Intrapersonal Comprehension & Self-report questionnaire & Ability \\
     & Intrapersonal Regulation & Self-report questionnaire & Ability \\
-    & Intrapersonal Utilization & Self-report questionnaire & Ability \\    
+    & Intrapersonal Utilization & Self-report questionnaire & Ability \\
 
     \midrule
     \multirow{4}{*}{EQ-I}
