--- a/summaryearlier.tex
+++ b/summaryearlier.tex
@@ -1,4 +1,3 @@
-
 \begin {table}[H]
   \caption{Quantitative data sources}
   \label{listofstudies}
@@ -8,8 +7,8 @@
     1 & University students & RaFD & 50 & 200 \\
     \midrule
     \multirow{3}{*}{2}
-    & Last-year psychotherapy students & RaFD   & 16 & 200 \\ 
-    & Last-year psychotherapy students & JACFEE & 59 & 200 \\   
-    & \nth{1} year psychology students & RaFD   & 24 & 200
+    & Last-year psychotherapy students & RaFD   & 16 & 200 \\
+    & Last-year psychotherapy students & JACFEE & 59 & 200 \\
+    & First-year psychology students & RaFD   & 24 & 200
   \end{tabularx}
 \end{table}
